[FIX] Blogs overflow-x hidden

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -16,6 +16,7 @@ html {
 }
 body {
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 #root {
   overflow: hidden;
